correccion de stylos

--- a/index.html
+++ b/index.html
@@ -1,30 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
     <title>Laboratorio 2</title>
 </head>
+
 <body>
     <header>
 
     </header>
 
     <main>
-
         <p class="p1">Animate al coworcking</p>
-        <h2>Le damos lugar<br>a tus ideas</h2>
-<p class="p2">Alquiler temporalde <span>espacio de trabajo compartidos</span></p>
 
-<div>
-    <img src="assets/img-cowork.png" alt="">
-</div>
-<p class="p3">Espacio de trabajo es un area común con ubicacion movil,<br>sólo trae tu computadora portatil, elegi un lugar disponible<br>y ponte a trabajar.</p>
+
+
+        <h2>Le damos lugar<br>a tus ideas</h2>
+        <p class="p2">Alquiler temporalde <span>espacio de trabajo compartidos</span></p>
+
+        <div>
+            <img src="assets/img-cowork.png" alt="">
+        </div>
+        <p class="p3">Espacio de trabajo es un area común con ubicacion movil,<br>sólo trae tu computadora portatil,
+            elegi un lugar disponible<br>y ponte a trabajar.</p>
     </main>
- 
+
     <footer>
 
     </footer>
 </body>
+
 </html>
